# misc-sdl-projects

./: .gitignore  README.md  README.org
arkanoid/: CMakeLists.txt
arkanoid/head/: ark.hh  arko.hh  eventh.hh  garko.hh  marko.hh  paddle.hpp  win.hh
arkanoid/head/state/: .#gstate.hh  gstate.hh  mstate.hh  state.hh  statem.hh
arkanoid/src/: ark.cc  arko.cc  eventh.cc  garko.cc  main.cc  main.cpp  marko.cc  win.cc
arkanoid/src/state/: gstate.cc  mstate.cc  state.cc  statem.cc
cgol/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cgol/head/: argh.hh  cell.hh  config.hh
cgol/src/: argh.cc  cell.cc  simulation.cc
pong/: .gitignore  CMakeLists.txt  Cargo.toml  README.org
pong/head/: eng.hpp  po.hpp
pong/src/: eng.cpp  main.cpp  main.rs  po.cpp
snake/: CMakeLists.txt  README.org
snake/src/: main.cpp
