[package]
name = "pong"
version = "0.1.0"
authors = ["rmj <pwishie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"
default-features = false
features = ["ttf"]

